test/Dialect/LLZK/Inputs/header_6.llzk
// Imported via `include_fail.llzk`

module attributes {veridise.lang = "llzk"} {
  // expected-error@+1 {{array must have a shape of at least one element}}
  llzk.func private @b(%x: !llzk.array<!llzk.felt>) 
}
